fix some responsive spacing issues with the banner

--- a/css/style.css
+++ b/css/style.css
@@ -487,7 +487,7 @@ a .fa {
 .banner {
   width: 100%;
   height: 300px;
-  background: #edc2af;
+  background: #FFF;
   background-image: url('../img/lake.jpg');
   background-size: cover;
   background-repeat: no-repeat;
@@ -1046,6 +1046,14 @@ input:focus, input[type=text]:focus,input[type=email]:focus,input[type=location]
 
 @media screen and (max-width:1080px) {
 
+  .banner .logo {
+        margin-top: 100px;
+  }
+
+  .banner h2 {
+      padding-top: 95px;
+  }
+
 
 .menu .navigation ul li {
   width: 100%;
@@ -1153,6 +1161,14 @@ input:focus, input[type=text]:focus,input[type=email]:focus,input[type=location]
 }
 
 @media screen and (max-width:640px) {
+
+  .banner .logo {
+        margin-top: 100px;
+  }
+
+  .banner h2 {
+      padding-top: 95px;
+  }
 
   body {
     background-size: 300%!important;
@@ -1387,6 +1403,14 @@ nav ul li a:hover, nav ul li a:focus { text-decoration: none; color: rgba(255, 2
 
 @media screen and (max-width: 55.1875em){
 
+  .banner .logo {
+        margin-top: 75px;
+  }
+
+  .banner h2 {
+      padding-top: 75px;
+  }
+
   .cbp-spmenu-horizontal {
     font-size: 75%;
     height: 110px;
@@ -1403,6 +1427,14 @@ nav ul li a:hover, nav ul li a:focus { text-decoration: none; color: rgba(255, 2
 }
 
 @media screen and (max-height: 26.375em){
+
+  .banner .logo {
+        margin-top: 65px;
+  }
+
+  .banner h2 {
+      padding-top: 65px;
+  }
 
   .cbp-spmenu-vertical {
     font-size: 90%;
